Updating 60 FB to latest version of branch